--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -9,7 +9,7 @@
 	background-blend-mode: color-dodge;
 	background-position: center;
 	padding-top: 0 !important;
-	padding-bottom: 2rem;
+	padding-bottom: 3rem;
 	&__title {
 		h4 {
 			font-size: 2.2rem;
@@ -100,6 +100,10 @@
 		}
 	}
 	&__map {
+		//height: 100vh;
 		padding-bottom: 4rem !important;
+		iframe {
+			height: 100vh;
+		}
 	}
 }
