--- a/assets/sass/components/_team.scss
+++ b/assets/sass/components/_team.scss
@@ -20,9 +20,9 @@
 	&__member {
 		color: $black;
 		background-color: rgba($white, 1);
-		padding: 2rem;
+		padding: 2rem 1rem;
 		height: 28rem;
-		width: 100%;
+		//width: 100%;
 		box-shadow: 0px 0px 2rem -4px rgba(9,15,24,0.43);
 		a {
 			padding-bottom: 2rem;
@@ -40,5 +40,8 @@
 				transition: .5s all;
 			}
 		}
+	}
+	&__desc {
+		font-size: 1.4rem;
 	}
 }
