--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -26,11 +26,6 @@
 		justify-content: space-between;
 		align-items: center;
 		padding-top: 2rem;
-		@include respond (phone) {
-			//flex-direction: column;
-			//align-items: center;
-			//gap: 2rem;
-		}
 	}
 	&__icons {
 	    display: inline-block;
@@ -100,10 +95,12 @@
 		}
 	}
 	&__map {
-		//height: 100vh;
 		padding-bottom: 4rem !important;
 		iframe {
-			height: 65rem;
+			height: 62rem;
+			@include respond (mini-tab) {
+				height: 30rem;
+			}
 		}
 	}
 }
