--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -82,6 +82,7 @@ input#mc-embedded-subscribe {
 }
 
 .vr-video {
+	background-image: url(../img/vr-background-scalled.png);
     position: relative;
     width: 100%;
     height: 100vh !important;
